--- a/diffusion_env.yaml
+++ b/diffusion_env.yaml
@@ -15,6 +15,7 @@ dependencies:
   - cudatoolkit=11.3
   - scikit-image
   - scikit-learn
+  - ninja
   - pip:
     - albumentations==1.3.0
     - diffusers
