--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-albumentations
+albumentations==1.3.0
 diffusers
 pudb==2019.2
 invisible-watermark
 imageio==2.9.0
-imageio-ffmpeg==0.4.2
+# imageio-ffmpeg==0.4.2
 omegaconf==2.1.1
 test-tube>=0.7.5
 streamlit>=0.73.1
@@ -15,6 +15,47 @@ kornia==0.6
 academictorrents
 pytorch_lightning==1.6.5
 diffdist==0.1
-open-clip-torch
-stable-diffusion-sdkit==2.1.4
+open-clip-torch==2.0.2
+timm==0.6.11
 boto3
+nltk
+# from Detrex
+wandb
+# from DRAGGAN
+imgui==2.0.0
+glfw==2.6.1
+gradio==3.35.2
+pyopengl==3.1.5
+imageio-ffmpeg==0.4.3
+pyspng-seunglab
+###############################################
+# below are from detectron2
+Pillow>=7.1  # or use pillow-simd for better performance
+matplotlib  # TODO move it to optional after we add opencv visualization
+pycocotools>=2.0.2  # corresponds to https://github.com/ppwwyyxx/cocoapi
+# Do not add opencv here. Just like pytorch, user should install
+# opencv themselves, preferrably by OS's package manager, or by
+# choosing the proper pypi package name at https://github.com/skvark/opencv-python
+# Also, avoid adding dependencies that transitively depend on pytorch or opencv.
+# ------------------------------------------------------------
+# The following are pure-python dependencies that should be easily installable.
+# But still be careful when adding more: fewer people are able to use the software
+# with every new dependency added.
+termcolor>=1.1
+yacs>=0.1.8
+tabulate
+cloudpickle
+tqdm>4.29.0
+tensorboard
+# Lock version of fvcore/iopath because they may have breaking changes
+# NOTE: when updating fvcore/iopath version, make sure fvcore depends
+# on compatible version of iopath.
+fvcore>=0.1.5,<0.1.6  # required like this to make it pip installable
+iopath>=0.1.7,<0.1.10
+hydra-core>=1.1
+black
+packaging
+lvis
+numpy==1.23.5
+# end of detectron2
+###################################
