--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,8 @@ kornia==0.6
 academictorrents
 pytorch_lightning==1.6.5
 diffdist==0.1
-open-clip-torch==2.0.2
+clip
+# open-clip-torch==2.0.2 # hack: comment for stable-diffusion-webui
 timm==0.6.11
 boto3
 nltk
@@ -24,7 +25,7 @@ wandb
 # from DRAGGAN
 imgui==2.0.0
 glfw==2.6.1
-gradio==3.35.2
+# gradio==3.35.2 # hack: comment for stable-diffusion-webui
 pyopengl==3.1.5
 imageio-ffmpeg==0.4.3
 pyspng-seunglab
@@ -59,3 +60,43 @@ lvis
 numpy==1.23.5
 # end of detectron2
 ###################################
+# below are from stable-diffusion-webui #
+GitPython
+Pillow
+accelerate
+
+basicsr
+blendmodes
+clean-fid
+einops
+gfpgan
+gradio==3.32.0
+inflection
+jsonmerge
+kornia
+lark
+# numpy
+# omegaconf
+
+piexif
+psutil
+# pytorch_lightning
+realesrgan
+requests
+resize-right
+
+safetensors
+# scikit-image>=0.19
+# timm
+tomesd
+# torch
+torchdiffeq
+torchsde
+# transformers==4.25.1
+# end for stable-diffusion-webui
+open-clip-torch==2.8.0
+########################################
+# from CodeFormer
+lpips
+gdown
+#####################################
