--- a/conda_env.yaml
+++ b/conda_env.yaml
@@ -1,4 +1,4 @@
-name: awesome_env
+name: awesome_env2.0
 channels:
   - pytorch
   - nvidia
@@ -9,10 +9,10 @@ channels:
   - defaults
 dependencies:
   - python==3.10.0
-  - pytorch==1.12.1
-  - torchvision==0.13.1
-  - torchaudio==0.12.1
-  - cudatoolkit=11.3
+  - pytorch=2.0.1
+  - torchvision=0.15.2
+  - torchaudio=2.0.2
+  - pytorch-cuda=11.8
   # - gcc_linux-64=9.3.0
   # - gxx_linux-64=9.3.0
   - gcc=8.5.0
